# HM01

./: README.md  RemiServer.py  WiFiHelper.py  arduino_reset.py  background.py  check_for_updates.py  functions_intern copy.py  functions_intern.py  hardware_com.py  hardware_com_micro.py  hardware_com_micro_backup.py  hotspot.py  install_requirements_systemwide.sh  led_calibration.py  led_calibration_temp.py  let_me_test_something.py  mobile_com.py  mobile_com2.py  mobile_com_claude.py  multitest.py  multitest_functions.py  positioning.py  process_handler.py  pyproject.toml  rgb_background.py  rgb_nano.py  setup_wifi_helper.sh  startscreen.py  thread_handler.py  u_map.npy
Multiexample/: multiexample.py  multiexample_functions.py
games/: Darts.py  Elimination.py  Elimination2.py  FPShooter.py  GunPong.py  Prestige.py  Scheiben.py  ShootUP.py  ShowShots.py  TowerDefenceWorld.py  TowerDefence_fast.py  TowerDefence_gl.py  TowerDefense.py  aim.py  aim_test.py  aimgod.py  cube.py  functions_intern.py  kalibrierung.py  minefield.py  physics1.py  physics2.py  physics3.py  physics4.py  sneek.py  template.py  trapshooting.py
templates/: index.html
